Fix empty column on mobile page

--- a/website/styles.css
+++ b/website/styles.css
@@ -1,81 +1,8 @@
-@keyframes smoky-shadow {
-  0% {
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-  }
-  10% {
-    box-shadow: 0 6px 10px rgba(0, 0, 0, 0.12);
-  }
-  20% {
-    box-shadow: 0 8px 14px rgba(0, 0, 0, 0.14);
-  }
-  30% {
-    box-shadow: 0 10px 18px rgba(0, 0, 0, 0.16);
-  }
-  40% {
-    box-shadow: 0 12px 20px rgba(0, 0, 0, 0.18);
-  }
-  50% {
-    box-shadow: 0 14px 24px rgba(0, 0, 0, 0.2);
-  }
-  60% {
-    box-shadow: 0 12px 20px rgba(0, 0, 0, 0.18);
-  }
-  70% {
-    box-shadow: 0 10px 18px rgba(0, 0, 0, 0.16);
-  }
-  80% {
-    box-shadow: 0 8px 14px rgba(0, 0, 0, 0.14);
-  }
-  90% {
-    box-shadow: 0 6px 10px rgba(0, 0, 0, 0.12);
-  }
-  100% {
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-  }
-}
-
-@keyframes fadeInFromBelow {
-  0% {
-    opacity: 0;
-    transform: translateY(-50px);
-  }
-  100% {
-    opacity: 1;
-    transform: translateY(0);
-  }
-}
-
-@keyframes slideInFromRight {
-  0% {
-    opacity: 0;
-    transform: translateX(100px);
-  }
-  80% {
-    transform: translateX(-10px);
-  }
-  100% {
-    opacity: 1;
-    transform: translateX(0);
-  }
-}
-
-@keyframes expandFromNothing {
-  0% {
-    transform: scale(0);
-    opacity: 0;
-  }
-  80% {
-    transform: scale(1.1);
-  }
-  100% {
-    transform: scale(1);
-    opacity: 1;
-  }
-}
+/* BADGES */
 
 @keyframes shootIn {
   0% {
-    transform: translateX(200px);
+    transform: translateX(10px);
     opacity: 0;
   }
   80% {
@@ -98,16 +25,32 @@
   animation-play-state: running; /* Run animation when scrolled into view */
 }
 
+/* HERO */
+
+@keyframes fadeInFromBelow {
+  0% {
+    opacity: 0;
+    transform: translateY(-50px);
+  }
+  100% {
+    opacity: 1;
+    transform: translateY(0);
+  }
+}
+
 #hero {
   animation: fadeInFromBelow 1.5s ease-out forwards;
 }
 
+/* BODY */
 
 body {
   font-family: "Inter", sans-serif;
   background-image: linear-gradient(to right, #ffecd2 0%, #fcb69f 100%);
   overscroll-behavior: none;
 }
+
+/* ICONS */
 
 .github-icon,
 .linkedin-icon,
@@ -145,12 +88,14 @@ body {
 }
 
 a {
-  text-decoration: none !important;
+  text-decoration: none !important; /* Disables underline under icons */
 }
 
 .badge-primary {
   background-color: #58a4b0;
 }
+
+/* CARDS */
 
 .card {
   display: flex;
@@ -161,6 +106,42 @@ a {
   background-color: rgba(255, 255, 255, 0.2);
   border: none;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); 
+}
+
+@keyframes smoky-shadow {
+  0% {
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  }
+  10% {
+    box-shadow: 0 6px 10px rgba(0, 0, 0, 0.12);
+  }
+  20% {
+    box-shadow: 0 8px 14px rgba(0, 0, 0, 0.14);
+  }
+  30% {
+    box-shadow: 0 10px 18px rgba(0, 0, 0, 0.16);
+  }
+  40% {
+    box-shadow: 0 12px 20px rgba(0, 0, 0, 0.18);
+  }
+  50% {
+    box-shadow: 0 14px 24px rgba(0, 0, 0, 0.2);
+  }
+  60% {
+    box-shadow: 0 12px 20px rgba(0, 0, 0, 0.18);
+  }
+  70% {
+    box-shadow: 0 10px 18px rgba(0, 0, 0, 0.16);
+  }
+  80% {
+    box-shadow: 0 8px 14px rgba(0, 0, 0, 0.14);
+  }
+  90% {
+    box-shadow: 0 6px 10px rgba(0, 0, 0, 0.12);
+  }
+  100% {
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  }
 }
 
 .card:hover {
@@ -179,6 +160,34 @@ a {
   border-radius: 10px;
 }
 
+/* PROJECT CARDS*/
+
+@keyframes expandFromNothing {
+  0% {
+    transform: scale(0);
+    opacity: 0;
+  }
+  80% {
+    transform: scale(1.1);
+  }
+  100% {
+    transform: scale(1);
+    opacity: 1;
+  }
+}
+
+.project-card.expanded {
+  animation: expandFromNothing 0.3s ease-out forwards; 
+}
+
+.project-card .card {
+  display: flex;
+  flex-direction: column;
+  height: 100%;
+}
+
+/* TIMELINE */
+
 .timeline {
   border-left: 3px solid #80a1d4;
   padding-left: 20px;
@@ -196,6 +205,20 @@ a {
   transition: opacity 0.5s ease-out;
 }
 
+  @keyframes slideInFromRight {
+    0% {
+      opacity: 0;
+      transform: translateX(50px);
+    }
+    80% {
+      transform: translateX(-10px);
+    }
+    100% {
+      opacity: 1;
+      transform: translateX(0);
+    }
+  }
+
 .timeline-card.visible {
   animation: slideInFromRight 0.5s ease-out forwards;
 }
@@ -209,15 +232,4 @@ a {
   position: absolute;
   top: 0;
   width: 20px;
-}
-
-
-.project-card.expanded {
-  animation: expandFromNothing 0.3s ease-out forwards; 
-}
-
-.project-card .card {
-  display: flex;
-  flex-direction: column;
-  height: 100%;
 }
